--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/back"
     android:orientation="vertical"
-    android:weightSum="11"
+    android:weightSum="12"
     tools:context="com.example.arya.registerloginapp.MainActivity">
 
     <TextView
@@ -65,6 +65,18 @@
         android:padding="5dp"
         android:text="Logout"
         android:textSize="24sp" />
+
+
+    <Button
+        android:id="@+id/btDetails"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="5dp"
+        android:layout_weight="1.5"
+        android:background="@color/colorAccent"
+        android:padding="5dp"
+        android:text="Give details"
+        android:textSize="22sp" />
 
 </LinearLayout>
 
